# codex-console-1

./: README.md  pyproject.toml  requirements.txt  webui.py
docs/: local-startup.md
luckmail/: __init__.py  client.py  exceptions.py  http_client.py  models.py  supplier.py  user.py
src/config/: constants.py  project_notice.py  settings.py
src/core/: http_client.py  register.py
src/core/anyauto/: register_flow.py
src/services/: temp_mail.py  tempmail.py
src/web/: app.py
static/css/: style.css
templates/: accounts.html  accounts_overview.html  auto_team.html  card_pool.html  email_services.html  index.html  login.html  logs.html  payment.html  settings.html
templates/partials/: site_notice.html
tests/: test_registration_engine.py
