[project]
name = "codex-console"
version = "1.1.0"
description = "OpenAI account management console"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "psycopg[binary]>=3.1.18",
    "websockets>=16.0",
    "path>=17.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
payment = [
    "playwright>=1.40.0",
]

[project.scripts]
codex-console = "webui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
